# telecom-crm-chat

./: .claudeignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  TODO_FIXES.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  lighthouse.yml
.streamlit/: config.toml
backend/: Dockerfile  main.py
backend/api/: deps.py
backend/api/routes/: chat.py  dashboard.py  explorer.py  health.py
backend/schemas/: chat.py  dashboard.py  explorer.py
data-agent-task/: churn-metadata.md  task.md
docs/: ARCHITECTURE_BRIEF.md  ARCHITECTURE_DETAILED.md  CODE_MAP.md  ROADMAP.md
frontend/: .env.example  Dockerfile  Dockerfile.migrate  lighthouserc.js  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
frontend/prisma/: schema.prisma
frontend/src/: middleware.ts  types.d.ts
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend/src/lib/: api.ts  auth.ts  types.ts  utils.ts
frontend/src/styles/: globals.css
frontend/src/theme/: theme.ts
frontend/src/types/: react-plotly.d.ts
frontend/tests/e2e/: accessibility.spec.ts  auth.spec.ts  landing.spec.ts  responsive.spec.ts
scripts/: benchmark_models.py  benchmark_results.md
src/app/: __init__.py
src/app/core/: __init__.py  config.py  database.py  llm.py  prompt.py  query_service.py  sql_validator.py
tests/: conftest.py
tests/integration/: test_database.py  test_e2e_queries.py
tests/unit/: test_charts.py  test_llm.py  test_sql_validator.py
(+39 files in other folders)
